@@ -1,6 +1,9 @@
 Revision history for Perl extension PGXN::API
 
 0.7.1
+      - Documentation and README documents now have their white space
+        normalized to single spaces before indexing. This allows highlighting
+        to work better in result sets. Suggested by Marvin Humphrey.
 
 0.7.0   2011-03-31T20:55:51
       - Added "search" URI template to the API server's `/index.json`.
